# nvm

./: .gitignore  CMakeLists.txt  CMakeSettings.json  README.md
inMemoryInterface/: CMakeLists.txt  README.md
inMemoryInterface/inc/inMemoryInterface/: InMemoryInterface.h
inMemoryInterface/src/: InMemoryInterface.cpp
nvmCore/: CMakeLists.txt  README.md
nvmCore/inc/nvmCore/: Core.h  Error.h  IXFlags.h  Interface.h  JumpCode.h  NVMCore.h  NVMInterface.h  NumericConfig.h  Options.h  RegisterTypes.h  TargetConfig.h
nvmCore/inc_priv/nvmCore/: CoreMacros.h
nvmCore/src/: Core.cpp  IXFlags.cpp  JumpCode.cpp  NVMCore.cpp  Options.cpp  RegisterTypes.cpp
nvmCore_test/: CMakeLists.txt
nvmCore_test/inc/nvmCore_test/: BasicTestFixture.h  TestMacros.h
nvmCore_test/src/: Add.cpp  BasicTestFixture.cpp  Decrement.cpp  FixedLiteralJumpNegative.cpp  FixedLiteralUnconditionalJump.cpp  FixedUnconditionalJump.cpp  Increment.cpp  Jump.cpp  Pop.cpp  Push.cpp  Read.cpp  Return.cpp  Write.cpp
parser/: .gitignore  CMakeLists.txt  README.md
parser/cmake/: ExternalAntlr4Cpp.cmake
parser/grammar/: NVM.g4  NVMLexerRules.g4
parser/inc/parser/: Line.h  ParseError.h  Parser.h
parser/src/: Line.cpp  Parser.cpp
parserDriver/: CMakeLists.txt
parserDriver/src/: main.cpp
sandbox/: CMakeLists.txt  README.md
sandbox/src/: main.cpp
testProgs/: test1.nvm
testSupport/: CMakeLists.txt
testSupport/inc/testSupport/: ObservableCore.h
testSupport/src/: ObservableCore.cpp
